# chromaflow

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quickstart.py
scripts/: run_tests.sh
src/chromaflow/: __init__.py  cli.py  config.py  pipeline.py
src/chromaflow/models/: __init__.py  schema.py
src/chromaflow/stages/: __init__.py  audio.py  ingest.py  reconcile.py  scene.py  visual.py
src/chromaflow/store/: __init__.py  chroma.py
src/chromaflow/utils/: __init__.py  hardware.py  logging.py
tests/: README.md  __init__.py  conftest.py  test_audio.py  test_chroma.py  test_ingest.py  test_pipeline.py  test_scene.py  test_visual.py
tests/integration/: __init__.py  conftest.py  test_chromadb_integration.py  test_clip_embeddings.py  test_e2e_pipeline.py  test_frame_extraction.py  test_long_video.py
